--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "classnames": "^2.3.1",
     "gatsby": "^4.4.0",
+    "gatsby-plugin-alias-imports": "^1.0.5",
     "gatsby-plugin-google-analytics": "^4.4.0",
     "gatsby-plugin-sass": "^5.4.0",
     "react": "^17.0.1",
